tabs section added

--- a/index.html
+++ b/index.html
@@ -69,6 +69,59 @@
       </section>
       <!--banner section end-->
 
+      <!-- Tabs section start -->
+      <section class="tabs">
+        <div class="wrapper">
+          <h3>tabs</h3>
+          <!--Tabs list start-->
+          <ul class="tab-list">
+            <li class="tab active-tab">
+              <a href="#FIXME" title="Home">home</a>            
+            </li>
+            <li class="tab">
+              <a href="#FIXME" title="Profile">profile</a> 
+            </li>
+            <li class="tab">
+              <a href="#FIXME" title="Contact">contact</a> 
+            </li>
+            <li class="tab">
+              <a href="#FIXME" title="About">about</a> 
+            </li>
+          </ul>
+          <!--Tabs list end-->
+          <!--Tabs content start-->
+          <ul class="tab-content">
+            <li class="content active-content" data-attribute="home">
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus, consequatur ex! Delectus eveniet, 
+                rem aliquid optio odit assumenda nihil quidem voluptatibus culpa rerum, in magni eaque, nemo ad veritatis aspernatur.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              </p>
+            </li>
+            <li class="content" data-attribute="about">
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus, consequatur ex! Delectus eveniet, 
+                rem aliquid optio in magni eaque, nemo ad veritatis aspernatur.
+              </p>
+            </li>
+            <li class="content" data-attribute="profile">
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus, consequatur ex! Delectus eveniet, 
+                rem aliquid optio odit assumenda nihil quidem voluptatibus culpa rerum, in magni eaque, nemo ad veritatis aspernatur.
+              </p>
+            </li>
+            <li class="content" data-attribute="contact">
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus, consequatur ex! Delectus eveniet, 
+                rem aliquid optio odit assumenda nihil quidem voluptatibus culpa rerum, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus, consequatur ex! Delectus eveniet, in magni eaque, nemo ad veritatis aspernatur.
+              </p>
+            </li>
+          </ul>
+          <!--Tabs content start-->
+        </div>
+      </section>
+      <!-- Tabs section start -->
+
       <!--customers section start-->
       <section class="customers">
         <div class="wrapper">
